--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
-    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@react-navigation/stack": "^6.3.25",
     "expo": "~50.0.7",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
